add analytics back

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143493567-1"></script>
     <script>
-      if ( !this ) {
+      if ( process.env.NODE_ENV === "production" ) {
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
