--- a/public/index.html
+++ b/public/index.html
@@ -53,5 +53,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script async src="https://cdn.headwayapp.co/widget.js"></script>
   </body>
 </html>
