--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
