--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
 
     <script async src="https://cdn.headwayapp.co/widget.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+    <script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 
   </body>
 </html>
