--- a/public/index.html
+++ b/public/index.html
@@ -80,10 +80,10 @@
     ></script>
     <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
     <script>
-      kofiWidgetOverlay.draw("tyrelchambers", {
+      kofiWidgetOverlay.draw("storiesaftermidnight", {
         type: "floating-chat",
-        "floating-chat.donateButton.text": "Support Me",
-        "floating-chat.donateButton.background-color": "#ff5f5f",
+        "floating-chat.donateButton.text": "Support me",
+        "floating-chat.donateButton.background-color": "#00b9fe",
         "floating-chat.donateButton.text-color": "#fff",
       });
     </script>
