--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
+    <script
+      data-name="BMC-Widget"
+      data-cfasync="false"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      data-id="reddex"
+      data-description="Support me on Buy me a coffee!"
+      data-message="If you'd like to help me keep Reddex alive, consider buying me a pizza so it's one less thing I have to worry about... mmm.... pizza 🍕 "
+      data-color="#79D6B5"
+      data-position="Right"
+      data-x_margin="18"
+      data-y_margin="18"
+    ></script>
     <script
       async
       src="https://platform.twitter.com/widgets.js"
