make some css changes

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
       data-id="reddex"
       data-description="Support me on Buy me a coffee!"
-      data-message="If you'd like to help me keep Reddex alive, consider buying me a pizza so it's one less thing I have to worry about... mmm.... pizza 🍕 "
+      data-message="If you'd like to help Stories After Midnight keep Reddex alive, consider buying me a pizza so it's one less thing I have to worry about... mmm.... pizza 🍕 "
       data-color="#79D6B5"
       data-position="Right"
       data-x_margin="18"
